# kuka_coke_cell

./: README.md
kuka_coke_configurations/: CMakeLists.txt  package.xml
kuka_coke_configurations/config/: controllers_configurations.yaml  fake_level1_hw.yaml  level0_controllers.yaml  level0_controllers_fake.yaml  level0_controllers_real.yaml  level0_gazebo_hw.yaml  level0_hw.yaml  level1_controllers.yaml  level1_hw.yaml  rosdyn_params.yaml
kuka_coke_configurations/launch/: control.rviz  fake_simulation.launch  fake_start.launch  real_simulation.launch  real_start.launch  robot_control.launch  rosdyn_node.launch  simulation.launch  start.launch
kuka_coke_description/: CMakeLists.txt  package.xml
kuka_coke_description/config/: object_params.yaml  view_cell.rviz
kuka_coke_description/launch/: display.launch  load_object_params.launch  upload.launch
kuka_coke_description/meshes/: table.stl  table1.STL  table2.STL  table_base.STL  table_hole.STL
kuka_coke_description/urdf/: coke_can.urdf  kuka_table.xacro  kuka_table_rviz.xacro  table.xacro  table_assembly.xacro  table_pybullet.urdf  table_pybullet.xacro
kuka_coke_gazebo/: CMakeLists.txt  package.xml
kuka_coke_gazebo/launch/: kr_50_r2500_gazebo_coke.launch  kr_50_r2500_world_coke.launch
kuka_coke_gazebo/worlds/: CSMT.world  kr_50_r2500_coke.world
kuka_coke_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
kuka_coke_pybullet/: CMakeLists.txt  package.xml
kuka_coke_pybullet/config/: pybullet_param.yaml
kuka_coke_pybullet/launch/: load_config.launch  simulation.launch
(+32 files in other folders)
